[gd_scene load_steps=2 format=2]

[ext_resource path="res://tscn/PolygonMerge.gd" type="Script" id=1]

[node name="PolygonMerge" type="Node2D"]
script = ExtResource( 1 )

[node name="PolygonA" type="Polygon2D" parent="."]
polygon = PoolVector2Array( 200, 312, 408, 312, 408, 520, 200, 520 )

[node name="PolygonB" type="Polygon2D" parent="."]
self_modulate = Color( 1, 1, 1, 0.501961 )
polygon = PoolVector2Array( 400, 176, 184, 120, 120, 472, 256, 368, 304, 232, 344, 376, 472, 456 )

[node name="Button" type="Button" parent="."]
margin_left = 16.0
margin_top = 16.0
margin_right = 160.0
margin_bottom = 80.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Line2D" type="Line2D" parent="."]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
